--- a/BlazorModelRefresh/Client/Pages/Index.razor
+++ b/BlazorModelRefresh/Client/Pages/Index.razor
@@ -4,9 +4,19 @@
 
 Blazored modal test.
 
-<button @onclick="@(() => Modal.Show<TestComponent>("Test"))">Test</button>
+<button @onclick="@(() => ShowDialog())">Test</button>
 
 
 @code {
     [CascadingParameter] public IModalService Modal { get; set; }
+
+    private void ShowDialog()
+    {
+        var parameters = new ModalParameters();
+        parameters.Add("FieldA", "A");
+        parameters.Add("FieldB", "B");
+        parameters.Add("ArrayA", new[] { "ArrayValue" });
+
+        Modal.Show<TestComponent>("Test", parameters);
+    }
 }
